Bug 340084 - "settings/nm-settings-connection.c.929 - Connection didn't have requested setting '802-1x'."
Summary: "settings/nm-settings-connection.c.929 - Connection didn't have requested set...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: VHI normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
: 341650 345417 346057 346145 346735 346897 347161 347462 347544 347716 348010 351591 351808 369351 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-10-18 06:52 UTC by Michi
Modified: 2024-12-23 18:49 UTC (History)
23 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.3.5
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.51 KB, text/plain)
2015-08-03 10:11 UTC, Dan Dart
Details
New crash information added by DrKonqi (3.58 KB, text/plain)
2016-02-15 19:50 UTC, Walt
Details
New crash information added by DrKonqi (1.44 KB, text/plain)
2016-05-06 16:34 UTC, Adam Mizerski
Details
New crash information added by DrKonqi (2.85 KB, text/plain)
2016-05-09 03:28 UTC, Garth Warren
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michi 2014-10-18 06:52:58 UTC
tried to edit a user-only WiFi connection that has WPA-PSK security.
The crash does not appear when the same connection is a system connection or when it is not secured.

the crash happens in kde-nm-connection-editor, while I was able to change the settings with nm-connection-editor

Reproducible: Always
Comment 1 Michi 2014-10-18 06:53:42 UTC
-- Backtrace:
Application: Connection editor (kde-nm-connection-editor), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#5  0x00007f99022fc446 in ConnectionDetailEditor::gotSecrets(QString const&, bool, QMap<QString, QMap<QString, QVariant> > const&, QString const&) () at /usr/lib64/libplasmanetworkmanagement-editor.so
#6  0x00007f9901bbf1fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#7  0x00007f9901f6947d in NetworkManager::Connection::gotSecrets(QString const&, bool, QMap<QString, QMap<QString, QVariant> > const&, QString const&) () at /usr/lib64/libNetworkManagerQt.so.1
#8  0x00007f9901f69ef1 in NetworkManager::Connection::onSecretsArrived(QDBusPendingCallWatcher*) () at /usr/lib64/libNetworkManagerQt.so.1
#9  0x00007f9901bbf1fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#10 0x00007f98ff4c4b5f in QDBusPendingCallWatcher::finished(QDBusPendingCallWatcher*) () at /usr/lib64/libQtDBus.so.4
#11 0x00007f9901bc359e in QObject::event(QEvent*) () at /usr/lib64/libQtCore.so.4
#12 0x00007f990043780c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#13 0x00007f990043dd4d in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#14 0x00007f9901602a9a in KApplication::notify(QObject*, QEvent*) () at /usr/lib64/libkdeui.so.5
#15 0x00007f9901bab2ad in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQtCore.so.4
#16 0x00007f9901bae57d in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib64/libQtCore.so.4
#17 0x00007f9901bd88fe in  () at /usr/lib64/libQtCore.so.4
#18 0x00007f98fd95fa04 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#19 0x00007f98fd95fc48 in  () at /usr/lib64/libglib-2.0.so.0
#20 0x00007f98fd95fcec in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#21 0x00007f9901bd80be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#22 0x00007f99004d4716 in  () at /usr/lib64/libQtGui.so.4
#23 0x00007f9901ba9e6f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#24 0x00007f9901baa165 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#25 0x00007f9901baf5b9 in QCoreApplication::exec() () at /usr/lib64/libQtCore.so.4
#26 0x000000000040a7b2 in main ()
Comment 2 Jan Grulich 2014-10-20 11:47:33 UTC
Git commit f30429d4285b3ec0e961c232ded73ea6e9e55713 by Jan Grulich.
Committed on 20/10/2014 at 11:47.
Pushed by grulich into branch '0.9.3'.

Request secrets only when we need them

Backported from KF5/Plasma5 version

M  +77   -64   libs/editor/connectiondetaileditor.cpp
M  +0    -1    libs/editor/connectiondetaileditor.h

http://commits.kde.org/plasma-nm/f30429d4285b3ec0e961c232ded73ea6e9e55713
Comment 3 Michi 2014-10-21 07:55:21 UTC
Hi Jan,

thanks a lot for this quick reaction. However, I still get this same error. Now though, I think it is a bit different. Before, I think it was only when the connection was a user connection, but now it crashes even on system connections.

thx Michi
Comment 4 Jan Grulich 2014-10-21 09:41:01 UTC
Do you mean with the fix above?
Comment 5 Michi 2014-10-21 11:25:36 UTC
yep
Comment 6 Jan Grulich 2014-10-21 12:20:19 UTC
Can you please tell me specifically what wireless security do you use in wireless security tab? Also can you please send me the new backtrace?
Comment 7 Michi 2014-10-21 13:13:01 UTC
it is wpa2-psk

Application: Connection editor (kde-nm-connection-editor), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#5  0x00007f88c7b6d2ba in ConnectionDetailEditor::gotSecrets(QString const&, bool, QMap<QString, QMap<QString, QVariant> > const&, QString const&) () at /usr/lib64/libplasmanetworkmanagement-editor.so
#6  0x00007f88c742f1fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#7  0x00007f88c77d947d in NetworkManager::Connection::gotSecrets(QString const&, bool, QMap<QString, QMap<QString, QVariant> > const&, QString const&) () at /usr/lib64/libNetworkManagerQt.so.1
#8  0x00007f88c77d9ef1 in NetworkManager::Connection::onSecretsArrived(QDBusPendingCallWatcher*) () at /usr/lib64/libNetworkManagerQt.so.1
#9  0x00007f88c742f1fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#10 0x00007f88c4d34b5f in QDBusPendingCallWatcher::finished(QDBusPendingCallWatcher*) () at /usr/lib64/libQtDBus.so.4
#11 0x00007f88c743359e in QObject::event(QEvent*) () at /usr/lib64/libQtCore.so.4
#12 0x00007f88c5ca780c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#13 0x00007f88c5cadd4d in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#14 0x00007f88c6e72a9a in KApplication::notify(QObject*, QEvent*) () at /usr/lib64/libkdeui.so.5
#15 0x00007f88c741b2ad in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQtCore.so.4
#16 0x00007f88c741e57d in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib64/libQtCore.so.4
#17 0x00007f88c74488fe in  () at /usr/lib64/libQtCore.so.4
#18 0x00007f88c36c4a04 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#19 0x00007f88c36c4c48 in  () at /usr/lib64/libglib-2.0.so.0
#20 0x00007f88c36c4cec in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#21 0x00007f88c74480be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#22 0x00007f88c5d44716 in  () at /usr/lib64/libQtGui.so.4
#23 0x00007f88c7419e6f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#24 0x00007f88c741a165 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#25 0x00007f88c741f5b9 in QCoreApplication::exec() () at /usr/lib64/libQtCore.so.4
#26 0x000000000040a7b2 in main ()
Comment 8 Jan Grulich 2014-10-21 13:21:48 UTC
Are you sure you have the fix above? Did you compile it from git? According to your backtrace it looks it's the same one as before, which doesn't make sense to me as you got secrets twice, but with my fix you should get them just once.
Comment 9 Michi 2014-10-21 13:47:55 UTC
yeah, I've also seen it and double checked. What I noticed was that the address of gotSecrets changed at least, so the binary seems to be different in some way ...
And yes I compiled it from git (see https://build.opensuse.org/package/show/home:scalpel4k/plasma-nm)
Comment 10 Jan Grulich 2014-10-21 14:33:56 UTC
Ah, I just realized that you the second slot gotSecrets() is from the editor while the first one is from NetworkManagerQt (libnm-qt) library. Can you please compile plasma-nm with debug symbols and send me again a backtrace? I would probably need it to see on what line it crashes. Otherwise I can just guess what could be wrong.
Comment 11 Michi 2014-10-21 15:29:58 UTC
is this ok?

Application: Connection editor (kde-nm-connection-editor), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#5  0x00007f1571bf12ca in ConnectionDetailEditor::gotSecrets(QString const&, bool, QMap<QString, QMap<QString, QVariant> > const&, QString const&) (this=0xbb92f0, id=..., success=<optimized out>, secrets=..., msg=...) at /usr/src/debug/plasma-nm-0.9.3.4.git.1413894098.10c5a1a/libs/editor/connectiondetaileditor.cpp:505
#6  0x00007f15714b31fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#7  0x00007f157185d47d in NetworkManager::Connection::gotSecrets(QString const&, bool, QMap<QString, QMap<QString, QVariant> > const&, QString const&) (this=<optimized out>, _t1=..., _t2=true, _t3=..., _t4=...) at /usr/src/debug/libnm-qt-0.9.8.2.git.1413294658/build/connection.moc:114
#8  0x00007f157185def1 in NetworkManager::Connection::onSecretsArrived(QDBusPendingCallWatcher*) (this=0x7fff27652460, watcher=0x9fcb20) at /usr/src/debug/libnm-qt-0.9.8.2.git.1413294658/connection.cpp:143
#9  0x00007f15714b31fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () at /usr/lib64/libQtCore.so.4
#10 0x00007f156edb8b5f in QDBusPendingCallWatcher::finished(QDBusPendingCallWatcher*) () at /usr/lib64/libQtDBus.so.4
#11 0x00007f15714b759e in QObject::event(QEvent*) () at /usr/lib64/libQtCore.so.4
#12 0x00007f156fd2b80c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#13 0x00007f156fd31d4d in QApplication::notify(QObject*, QEvent*) () at /usr/lib64/libQtGui.so.4
#14 0x00007f1570ef6a9a in KApplication::notify(QObject*, QEvent*) () at /usr/lib64/libkdeui.so.5
#15 0x00007f157149f2ad in QCoreApplication::notifyInternal(QObject*, QEvent*) () at /usr/lib64/libQtCore.so.4
#16 0x00007f15714a257d in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib64/libQtCore.so.4
#17 0x00007f15714cc8fe in  () at /usr/lib64/libQtCore.so.4
#18 0x00007f156d748a04 in g_main_context_dispatch () at /usr/lib64/libglib-2.0.so.0
#19 0x00007f156d748c48 in  () at /usr/lib64/libglib-2.0.so.0
#20 0x00007f156d748cec in g_main_context_iteration () at /usr/lib64/libglib-2.0.so.0
#21 0x00007f15714cc0be in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#22 0x00007f156fdc8716 in  () at /usr/lib64/libQtGui.so.4
#23 0x00007f157149de6f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#24 0x00007f157149e165 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib64/libQtCore.so.4
#25 0x00007f15714a35b9 in QCoreApplication::exec() () at /usr/lib64/libQtCore.so.4
#26 0x000000000040a7b2 in main(int, char**) (argc=2, argv=0x7fff27653178) at /usr/src/debug/plasma-nm-0.9.3.4.git.1413894098.10c5a1a/editor/main.cpp:85
Comment 12 Jan Grulich 2014-10-22 07:35:40 UTC
Git commit 5ab73192a5ab44dbe4912396ea506e61e91c9b8a by Jan Grulich.
Committed on 22/10/2014 at 07:35.
Pushed by grulich into branch '0.9.3'.

Prevent from crash when getting setting for adding secrets

M  +4    -2    libs/editor/connectiondetaileditor.cpp

http://commits.kde.org/plasma-nm/5ab73192a5ab44dbe4912396ea506e61e91c9b8a
Comment 13 Jan Grulich 2014-10-22 07:38:28 UTC
Ok, I probably found out the reason why it crashes for you, but I'm still not sure how is it possible. Anyway it should now work, can you please test it?
Comment 14 Michi 2014-10-22 08:07:05 UTC
awesome, it now works! thanks a lot again.
Comment 15 Jan Grulich 2015-03-23 08:40:07 UTC
*** Bug 345417 has been marked as a duplicate of this bug. ***
Comment 16 Jan Grulich 2015-03-23 08:40:15 UTC
*** Bug 341650 has been marked as a duplicate of this bug. ***
Comment 17 Jan Grulich 2015-04-13 08:30:08 UTC
*** Bug 346057 has been marked as a duplicate of this bug. ***
Comment 18 Jan Grulich 2015-04-14 11:44:44 UTC
*** Bug 346145 has been marked as a duplicate of this bug. ***
Comment 19 Jan Grulich 2015-04-27 07:53:38 UTC
*** Bug 346735 has been marked as a duplicate of this bug. ***
Comment 20 Jan Grulich 2015-04-29 12:38:06 UTC
*** Bug 346897 has been marked as a duplicate of this bug. ***
Comment 21 Jan Grulich 2015-05-04 13:52:01 UTC
*** Bug 347161 has been marked as a duplicate of this bug. ***
Comment 22 Jan Grulich 2015-05-11 13:12:52 UTC
*** Bug 347544 has been marked as a duplicate of this bug. ***
Comment 23 Jan Grulich 2015-05-11 13:12:58 UTC
*** Bug 347462 has been marked as a duplicate of this bug. ***
Comment 24 Jan Grulich 2015-05-14 13:29:38 UTC
*** Bug 347716 has been marked as a duplicate of this bug. ***
Comment 25 Jan Grulich 2015-05-21 07:00:07 UTC
*** Bug 348010 has been marked as a duplicate of this bug. ***
Comment 26 Dan Dart 2015-08-03 10:11:18 UTC
Created attachment 93860 [details]
New crash information added by DrKonqi

kde-nm-connection-editor (0.9.3.4) on KDE Platform 4.14.2 using Qt 4.8.7

- What I was doing when the application crashed:

Double clicked an existing connection. Each time I tried it crashed.

-- Backtrace (Reduced):
#6  0x00007f7108c4a166 in ConnectionDetailEditor::gotSecrets(QString const&, bool, QMap<QString, QMap<QString, QVariant> > const&, QString const&) () from /usr/lib/libplasmanetworkmanagement-editor.so
[...]
#8  0x00007f71088bfb4d in NetworkManager::Connection::gotSecrets(QString const&, bool, QMap<QString, QMap<QString, QVariant> > const&, QString const&) () from /usr/lib/x86_64-linux-gnu/libNetworkManagerQt.so.1
#9  0x00007f71088c04d0 in NetworkManager::Connection::onSecretsArrived(QDBusPendingCallWatcher*) () from /usr/lib/x86_64-linux-gnu/libNetworkManagerQt.so.1
[...]
#11 0x00007f7108642e1f in QDBusPendingCallWatcher::finished(QDBusPendingCallWatcher*) () from /usr/lib/x86_64-linux-gnu/libQtDBus.so.4
#12 0x00007f710804ff51 in QObject::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQtCore.so.4
Comment 27 Jan Grulich 2015-08-24 07:35:44 UTC
*** Bug 351591 has been marked as a duplicate of this bug. ***
Comment 28 Jan Grulich 2015-08-26 20:25:28 UTC
*** Bug 351808 has been marked as a duplicate of this bug. ***
Comment 29 Walt 2016-02-15 19:50:46 UTC
Created attachment 97235 [details]
New crash information added by DrKonqi

kde-nm-connection-editor (0.9.3.5) on KDE Platform 4.14.9 using Qt 4.8.6

- What I was doing when the application crashed: OpenVPN certicate change. Tried to edit VPN and the Connection Editor crashed. Fully repeatable, every time.

-- Backtrace (Reduced):
#5  0x00007f1e1fba13d9 in SettingWidget::SettingWidget(QSharedPointer<NetworkManager::Setting> const&, QWidget*, QFlags<Qt::WindowType>) () at /usr/lib64/libplasmanetworkmanagement-editor.so
#6  0x00007f1e1fb8547a in IPv6Widget::IPv6Widget(QSharedPointer<NetworkManager::Setting> const&, QWidget*, QFlags<Qt::WindowType>) () at /usr/lib64/libplasmanetworkmanagement-editor.so
#7  0x00007f1e1fba5ab9 in ConnectionDetailEditor::initTabs() () at /usr/lib64/libplasmanetworkmanagement-editor.so
#8  0x00007f1e1fbac6b2 in ConnectionDetailEditor::gotSecrets(QString const&, bool, QMap<QString, QMap<QString, QVariant> > const&, QString const&) () at /usr/lib64/libplasmanetworkmanagement-editor.so
[...]
#10 0x00007f1e1f81bfad in NetworkManager::Connection::gotSecrets(QString const&, bool, QMap<QString, QMap<QString, QVariant> > const&, QString const&) () at /usr/lib64/libNetworkManagerQt.so.1
Comment 30 Filipe 2016-04-29 15:32:01 UTC
I have version 0.9.3.5 and it's still broken :(

Application: kde-nm-connection-editor (0.9.3.5)
KDE Platform Version: 4.14.9
Qt Version: 4.8.6
Operating System: Linux 3.16.7-35-desktop x86_64
Distribution: "openSUSE 13.2 (Harlequin) (x86_64)"
Comment 31 Adam Mizerski 2016-05-06 16:34:35 UTC
Created attachment 98819 [details]
New crash information added by DrKonqi

kde-nm-connection-editor (0.9.3.5) on KDE Platform 4.14.9 using Qt 4.8.6

I have the same. It's not fixed.

-- Backtrace (Reduced):
#5  0x00007fafbec5a3d9 in SettingWidget::SettingWidget(QSharedPointer<NetworkManager::Setting> const&, QWidget*, QFlags<Qt::WindowType>) () at /usr/lib64/libplasmanetworkmanagement-editor.so
#6  0x00007fafbec3e47a in IPv6Widget::IPv6Widget(QSharedPointer<NetworkManager::Setting> const&, QWidget*, QFlags<Qt::WindowType>) () at /usr/lib64/libplasmanetworkmanagement-editor.so
#7  0x00007fafbec5eab9 in ConnectionDetailEditor::initTabs() () at /usr/lib64/libplasmanetworkmanagement-editor.so
#8  0x00007fafbec60ad2 in ConnectionDetailEditor::initEditor() () at /usr/lib64/libplasmanetworkmanagement-editor.so
#9  0x00007fafbec62914 in ConnectionDetailEditor::ConnectionDetailEditor(NetworkManager::ConnectionSettings::ConnectionType, QWidget*, QString const&, bool, QFlags<Qt::WindowType>) () at /usr/lib64/libplasmanetworkmanagement-editor.so
Comment 32 Garth Warren 2016-05-09 03:28:22 UTC
Created attachment 98849 [details]
New crash information added by DrKonqi

kde-nm-connection-editor (0.9.3.5) on KDE Platform 4.14.9 using Qt 4.8.6

- What I was doing when the application crashed:
I attempted to add an openVPN connection via the Network Manager. Reproducible at every attempt. The bug report claiming a fix for the afforementioned suggests that upgrading libNetworkManagerQt will solve the problem. I attempted to upgrade the library with zypper whereby I was informed that I was already running the most current version. 'libNetworkManagerQt1-0.9.8.2-3.1.3.x86_64' .

-- Backtrace (Reduced):
#5  0x00007fe8b9a383d9 in SettingWidget::SettingWidget(QSharedPointer<NetworkManager::Setting> const&, QWidget*, QFlags<Qt::WindowType>) () at /usr/lib64/libplasmanetworkmanagement-editor.so
#6  0x00007fe8b9a1c47a in IPv6Widget::IPv6Widget(QSharedPointer<NetworkManager::Setting> const&, QWidget*, QFlags<Qt::WindowType>) () at /usr/lib64/libplasmanetworkmanagement-editor.so
#7  0x00007fe8b9a3cab9 in ConnectionDetailEditor::initTabs() () at /usr/lib64/libplasmanetworkmanagement-editor.so
#8  0x00007fe8b9a3ead2 in ConnectionDetailEditor::initEditor() () at /usr/lib64/libplasmanetworkmanagement-editor.so
#9  0x00007fe8b9a40914 in ConnectionDetailEditor::ConnectionDetailEditor(NetworkManager::ConnectionSettings::ConnectionType, QWidget*, QString const&, bool, QFlags<Qt::WindowType>) () at /usr/lib64/libplasmanetworkmanagement-editor.so
Comment 33 Gerard Dirkse 2016-08-15 13:48:05 UTC
After installing libNetworkManagerQt1 0.9.8.3 from the leap repositories (http://software.opensuse.org/package/libNetworkManagerQt1) into my opensuse 13.2 system, problem was solved.
Comment 34 Adam Mizerski 2016-08-17 20:19:32 UTC
Thanks Gerard Dirkse! That works great!
I've created update request for openSUSE 13.2 https://build.opensuse.org/request/show/419818
Comment 35 Jan Grulich 2016-10-05 11:27:15 UTC
*** Bug 369351 has been marked as a duplicate of this bug. ***