Request secrets only when we need them

Backported from KF5/Plasma5 version
BUG:340084